[build-system]
build-backend = "hatchling.build"
requires = [
    "editables",
    "hatchling",
]

[project]
name = "svzerodtrees"
version = "0.1.0"
description = "Structured tree boundary condition modeling for svZeroD cardiovascular simulations"
authors = [{ name = "Nick Dorn", email = "ndorn@stanford.edu" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"

# TODO: add keywords
keywords = []

dependencies = [
    "scipy >= 1.9.1",
    "numpy >= 1.22.3",
    "vtk >= 9.1.0",
    "pandas >= 1.4.3",
    "matplotlib >= 3.5.0",
    "filelock",
    "networkx",
    "multiprocess",
    "numba",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/ncdorn/svZeroDTrees"
"Source Code" = "https://github.com/ncdorn/svZeroDTrees"
"Bug Tracker" = "https://github.com/ncdorn/svZeroDTrees/issues"
Documentation = "https://github.com/ncdorn/svZeroDTrees/blob/main/README.md"

[project.scripts]
svzerodtrees = "svzerodtrees.cli:main"

[dependency-groups]
dev = [
    "black",
    "hatch",
    "ipykernel",
    "jupyterlab",
    "mypy",
    "ruff",
]
tests = [
    "pytest",
    "pytest-cov",
]
solver = [
    "pysvzerod",
]
build = [
    "twine",
]
docs = []

[tool.uv]
package = true
default-groups = []

[tool.uv.sources]
# pysvzerod is built from the sibling solver repo rather than fetched from PyPI.
pysvzerod = { path = "../svZeroDSolver", editable = true }

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/svzerodtrees"]

[tool.hatch.envs.build]
description = "Build source and wheel distributions and validate metadata."
dependency-groups = ["build"]
builder = true

[tool.hatch.envs.build.scripts]
check = [
    "hatch build {args:--clean}",
    "twine check dist/*",
]

[tool.hatch.envs.test]
description = "Run the test suite against an installed package."
dependency-groups = ["tests"]

[tool.hatch.envs.test.scripts]
unit = "pytest tests/unit {args}"
integration = "pytest tests/integration {args}"
e2e = "pytest tests/e2e {args}"
coverage = "pytest tests/unit tests/integration tests/e2e --cov=svzerodtrees --cov-report=term-missing --cov-report=xml {args}"
run = "pytest tests/unit tests/integration tests/e2e {args:--cov=svzerodtrees --cov-report=term-missing --cov-report=xml}"

[tool.hatch.envs.docs]
description = "Serve the repository docs directory for local preview."
dependency-groups = ["docs"]

[tool.hatch.envs.docs.scripts]
serve = "python -m http.server --directory docs {args:8000}"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: isolated tests for a function, class, or module with no real workflow execution",
    "integration: package-level contract tests that combine multiple svzerodtrees components",
    "e2e: hermetic CLI/API smoke tests that exercise entrypoint dispatch without external solvers",
    "external: tests that require optional external binaries, services, or non-hermetic runtime dependencies",
    "slow: tests that are intentionally slower than the default hermetic suite",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.paths]
source = [
    "src/svzerodtrees",
    "*/site-packages/svzerodtrees",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["svzerodtrees"]
omit = [
    "src/svzerodtrees/_archive/*",
    "*/site-packages/svzerodtrees/_archive/*",
    "src/svzerodtrees/post_processing/ParaviewPostProcessor.py",
    "*/site-packages/svzerodtrees/post_processing/ParaviewPostProcessor.py",
    "src/svzerodtrees/post_processing/paraview_time_series_visualization.py",
    "*/site-packages/svzerodtrees/post_processing/paraview_time_series_visualization.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2
